type:fix: fixes the overflow scroll and key enter validation

--- a/src/components/assets/message.css
+++ b/src/components/assets/message.css
@@ -4,11 +4,7 @@
   margin: 20px;
 }
 
-.messageScroll {
-  height: 100%;
-  overflow-y: scroll;
-  padding-right: 15px;
-}
+
 
 .messageTop {
   display: flex;
@@ -16,12 +12,12 @@
   padding: 15px;
 }
 .messageText {
-  width: 100px;
-  max-width: 200px;
-  padding: 10px;
+  width: 200px;
+  max-width: 250px;
+  padding: 5px;
   background-color: rgb(184, 177, 177);
-  border-bottom-left-radius: 20px;
-  color: rgb(16,24,33);
+  border-radius: 20px;
+  color: rgb(16, 24, 33);
 }
 .messageBottom {
   font-size: 12px;
