--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px;
   border-bottom: 1px solid #e6e6e6;
   margin-bottom: 60px;
 }
@@ -126,7 +126,7 @@ p span{
 .form-group input,
 .form-group textarea,
 .form-group select {
-  width: 100%;
+  width: 70%;
   padding: 10px;
   border: 1px solid #e6e6e6;
   border-radius: 5px;
@@ -170,6 +170,8 @@ p span{
   margin-bottom: 20px;
   color: #FFFFFF;
   background-color: #1966FF;
+  border-radius: 10px;
+  border:none;
   text-align: center;
 }
 
